# Capstone2021

./: README.md
Gazebo_Simulation/: Simulation.md
Gazebo_Simulation/catkin_ca/src/car_sample/: CMakeLists.txt  package.xml
Gazebo_Simulation/catkin_ca/src/car_sample/launch/: display.launch  gazebo.launch
Gazebo_Simulation/catkin_ca/src/car_sample/meshes/: LR_link.STL  L_link.STL  RF_link.STL  RR_link.STL  base_footprint_link.STL  sersor_link.STL
Gazebo_Simulation/catkin_ca/src/car_sample/src/: pos_error_pub.cpp
Gazebo_Simulation/catkin_ca/src/car_sample/urdf/: car_sample.csv  car_sample.urdf
Gazebo_Simulation/catkin_ca/src/joystick_sub/: package.xml
Gazebo_Simulation/catkin_ca/src/joystick_sub/src/: sim_node.cpp
Gazebo_Simulation/catkin_ca/src/pose_msgs/: CMakeLists.txt  package.xml
Gazebo_Simulation/catkin_ca/src/ros_gui/: package.xml
Gazebo_Simulation/catkin_ca/src/ros_gui/include/: ros_connect.h
Gazebo_Simulation/catkin_ca/src/ros_gui/launch/: gui_trailer.launch
Gazebo_Simulation/catkin_ca/src/ros_gui/src/: Status.qml  Trailer.qml  gui.qml  qml_.qrc
Vision_Pathplanning/: README.md
Vision_Pathplanning/RaspberryPi_Trailer/: camera.yaml
Vision_Pathplanning/RaspberryPi_Trailer/opencv/: CMakeLists.txt  package.xml
Vision_Pathplanning/RaspberryPi_Trailer/opencv/launch/: line_detection.launch
Vision_Pathplanning/RaspberryPi_Trailer/opencv/src/: test.cpp
Vision_Pathplanning/catkin_ca/src/AutoDrive/: CMakeLists.txt  package.xml
Vision_Pathplanning/catkin_ca/src/AutoDrive/launch/: AutoDrivePredefined.launch  AutoDriveVision.launch
Vision_Pathplanning/catkin_ca/src/AutoDrive/src/: inverse_kinematics_auto.cpp
Vision_Pathplanning/catkin_ca/src/Predefined_Path/: CMakeLists.txt  package.xml
Vision_Pathplanning/catkin_ca/src/Predefined_Path/src/: predefined_path_planning.cpp
Vision_Pathplanning/catkin_ca/src/UserDrive/: CMakeLists.txt  package.xml
Vision_Pathplanning/catkin_ca/src/UserDrive/launch/: UserDrivePredefined.launch  UserDriveVision.launch
Vision_Pathplanning/catkin_ca/src/UserDrive/src/: inverse_kinematics_user.cpp
Vision_Pathplanning/catkin_ca/src/VisionPathPlanning/: CMakeLists.txt  package.xml
Vision_Pathplanning/catkin_ca/src/VisionPathPlanning/src/: Vision_Path_Planning.cpp
Vision_Pathplanning/catkin_ca/src/car_sample/config/: joint_names_car_sample.yaml
Vision_Pathplanning/catkin_ca/src/car_sample/launch/: display.launch  gazebo.launch
Vision_Pathplanning/catkin_ca/src/car_sample/src/: TrailerPathPlanning.cpp  pos_error_pub.cpp
Vision_Pathplanning/catkin_ca/src/joystick_sub/: CMakeLists.txt  package.xml
Vision_Pathplanning/catkin_ca/src/joystick_sub/launch/: joylaunch.launch  stepinputtest.launch
Vision_Pathplanning/catkin_ca/src/joystick_sub/src/: sim_node.cpp  step_input_test.cpp
Vision_Pathplanning/catkin_ca/src/pose_msgs/: CMakeLists.txt
Vision_Pathplanning/catkin_ca/src/pose_msgs/msg/: msgPose.msg
Vision_Pathplanning/catkin_ca/src/ros_gui/: CMakeLists.txt  package.xml
Vision_Pathplanning/catkin_ca/src/ros_gui/include/: ros_connect.h  ros_image.h
Vision_Pathplanning/catkin_ca/src/ros_gui/launch/: gui_trailer.launch
Vision_Pathplanning/catkin_ca/src/ros_gui/src/: image_node.cpp  trailer_ui.cpp
Vision_Pathplanning/catkin_ca/src/ros_gui/src/qml/: Cameras.ui.qml  InnerRing.qml  MiniTrailer.qml  MiniTrailerWheel.qml  Needle.qml  SpeedNeedle.qml  Speedometer.qml  Status.ui.qml  TrailerUI.ui.qml  gui.qml  qml_.qrc
catkin_ca/src/car_sample/: CMakeLists.txt  package.xml
catkin_ca/src/car_sample/config/: joint_names_car_sample.yaml
catkin_ca/src/car_sample/launch/: display.launch  gazebo.launch
catkin_ca/src/car_sample/meshes/: LF_link.STL  R_link.STL  base_link.STL  potential_link.STL
catkin_ca/src/car_sample/urdf/: car_sample.csv  car_sample.urdf
catkin_ca/src/joystick_sub/: CMakeLists.txt
catkin_ca/src/joystick_sub/launch/: joylaunch.launch
catkin_ca/src/joystick_sub/src/: joy_node.cpp
catkin_ca/src/pose_msgs/msg/: msgAng.msg  msgPose.msg
catkin_ca/src/ros_gui/: CMakeLists.txt
catkin_ca/src/ros_gui/src/: gui_trailer.cpp  qtquickcontrols2.conf
