<?xml version="1.0"?>
<package format="2">
  <name>joystick_sub</name>
  <version>0.1.0</version>
  <description>The joystick_sub package</description>

<!-- One maintainer tag required, multiple allowed, one person per tag -->
<!-- Example:  -->
<!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
<maintainer email="yelin@todo.todo">yelin</maintainer>


<!-- One license tag required, multiple allowed, one license per tag -->
<!-- Commonly used license strings: -->
<!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
<license>TODO</license>

<buildtool_depend>catkin</buildtool_depend>
<build_depend>roslint</build_depend>

<depend>diagnostic_updater</depend>
<depend>joystick</depend>
<depend>roscpp</depend>
<depend>std_msgs</depend>
<depend>sensor_msgs</depend>

<test_depend>rosbag</test_depend>

<export>
  <rosbag migration_rule_file="migration_rules/Joy.bmr"/>
</export>
</package>
