<?xml version="1.0"?>
<package format="2">
  <name>ros_gui</name>
  <version>0.0.0</version>
  <description>Test package using QT5 QML in a ROS node</description>

  <maintainer email="yelinkim2@gmail.com">yelin</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>


  <export>

  </export>
</package>
