<?xml version="1.0"?>
<package format="2">
  <name>ros_gui</name>
  <version>0.0.0</version>
  <description>Test package using QT5 QML in a ROS node</description>

  <maintainer email="yelinkim2@gmail.com">yelin</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>wrp_sdk</build_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>wrp_sdk</exec_depend>

  <export>

  </export>
</package>
